.provarCaches/00D410000011HE0EAM/objects/rstk__sopacksrl__c.object
<CustomObject>
    <description>sopacksrl__c</description>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__sopacksrl_sopackdmd__r.Name &amp; &apos; &apos; &amp; rstk__sopacksrl_srlno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopacksrl_sopackdmd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packing Slip Demand</label>
        <referenceTo>rstk__sopackdmd__c</referenceTo>
        <relationshipName>sopacksrls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sopacksrl_soshipsrl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shipper Serial</description>
        <inlineHelpText>Shipper Serial</inlineHelpText>
        <label>Shipped Product Serial Detail</label>
        <referenceTo>rstk__soshipsrl__c</referenceTo>
        <relationshipName>sopacksrls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sopacksrl_srlno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Obsolete: Packing Slip Line Serial Num</label>
    <nameField>
        <label>Packing Slip Line Serial Numbers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packing Slip Line Serial Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>